# CrediFlow

./: .dockerignore  .env.example  .gitignore  CrediFlow 智能小额信贷业务系统 开发提示词.md  Dockerfile.java  README.md  build_log.txt  demo.rs  docker-compose.go.yml  docker-compose.java.yml  docker-compose.python.yml  docker-compose.yml  pom.xml  信贷项目智能体设计与分工文档.md
.claude/: CLAUDE.md  settings.local.json
Test/: benchmark_suite.py  test_qwen.py
admin-bff-service/: README.md  pom.xml
agent-python/: pyproject.toml
app-bff-service/: README.md
batch-service/: Dockerfile  go.mod  main.go
crediflow-common/: pom.xml
credit-risk-service/: pom.xml
credit/agent-python/: pyproject.toml
credit/agent-python/crediflow_agent/: llm_core.py  main.py
data-agent/: Dockerfile  app.py  config.py  embedding_adapters.py  llm_adapters.py  milvus_manager.py  nl2api.py  nl2sql.py  rag_graph.py  requirements.txt
docs/: agent-architecture.md  agent-java-integration.md  agent-rpc-contract.md  auth-architecture-philosophy.md  batch-service-data-gap.md  code-review-report.md  contract-and-credit-architecture-issues.md  db-access.md  e2e-test-checklist.md  gateway-auth-architecture.md  go-removal-plan.md  internal-auth.md  milvus-strategy.md  nacos-convention.md  observability-metrics.md  openapi.json  opentelemetry-fallback.md  python-agent-data-gap.md  readability-report.md  risk_control_pipeline.md  rocketmq-dlq.md  sentinel-convention.md  sharding-sphere.md  spec-traceability.md
fund-flow-service/: pom.xml
java/: pom.xml
loan-application-service/: pom.xml
observability/: prometheus.yml  (+1 more)
(+828 files in other folders)
